@@ -35,6 +35,9 @@ Release @version@-@release@ Start 11/09/2023 End --/--/----
 20. indimail-mta.spec, qlocal_upgrade: pass --setuser-priv to svctool for qmail-send service
 31. qmail-local.c: added X-Forwarded-To, X-Forwarded-For headers when
     forwarding
+32. qmail-local, svctool: added SANITIZE_ENV to clear environment variables
+    for dot-qmail commands
+33. added '%' option in dot-qmail to add env variables from a directory
 
 * Fri Sep 08 2023 11:58:03 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.4-1.1%{?dist}
 Release 3.0.4-1.1 Start 24/04/2023 End 08/09/2023
